data-plant/data-mesh/data-base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: patch-metadata-name
  namespace: patch-metadata-namespace
