data-plant/data-mesh/data-base/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: patch-metadata-name
  namespace: patch-metadata-namespace
spec:
  host: patch-spec-host
  subsets:
    - name: v1
      labels:
        version: v1
